force-app/main/default/objects/Claim/fields/WC_AI_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>WC_AI_Recommendation__c</fullName>
    <description>WC — Recommended decision from AI (human still decides).</description>
    <label>WC AI Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>