force-app/main/default/objects/Claim/fields/WC_AI_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>WC_AI_Risk_Score__c</fullName>
    <description>WC — AI / rules-based risk score (0–100) for approver and Slack card.</description>
    <label>WC AI Risk Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>