force-app/main/default/objects/Claim/fields/WC_AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>WC_AI_Summary__c</fullName>
    <description>WC — Short AI-generated summary for OEM approvers.</description>
    <label>WC AI Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>