force-app/main/default/objects/Claim/fields/WC_Approval_Channel__c.field-meta.xml
<CustomField>
    <fullName>WC_Approval_Channel__c</fullName>
    <description>WC — Where the approval decision was recorded.</description>
    <label>WC Approval Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Electra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>