force-app/main/default/objects/Claim/fields/WC_Approval_Result__c.field-meta.xml
<CustomField>
    <fullName>WC_Approval_Result__c</fullName>
    <description>Approval outcome for analytics (rates in Data Cloud). Intake sets Pending; workflows or users set Approved/Rejected.</description>
    <label>WC Approval Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>