force-app/main/default/objects/Claim/fields/WC_Approved_At__c.field-meta.xml
<CustomField>
    <fullName>WC_Approved_At__c</fullName>
    <description>WC — Server time when the claim was approved (Slack block action or Electra auto-approve).</description>
    <label>WC Approved At</label>
    <type>DateTime</type>
</CustomField>