force-app/main/default/objects/Claim/fields/WC_Approved_By_User__c.field-meta.xml
<CustomField>
    <fullName>WC_Approved_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>WC — User who approved or rejected the claim (when recorded).</description>
    <label>WC Approved By User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>WC Approved Claims</relationshipLabel>
    <relationshipName>WC_Approved_By_User_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>