force-app/main/default/objects/Claim/fields/WC_Claim_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>WC_Claim_Effective_Date__c</fullName>
    <description>Business date for warranty analytics (rolling 30/60/90 windows in Data Cloud). Defaults to created-date semantics when not set.</description>
    <label>WC Claim Effective Date</label>
    <type>Date</type>
</CustomField>