force-app/main/default/objects/Claim/fields/WC_Claim_Source__c.field-meta.xml
<CustomField>
    <fullName>WC_Claim_Source__c</fullName>
    <description>WC — How the claim was created.</description>
    <label>WC Claim Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agentforce</fullName>
                <default>true</default>
                <label>Agentforce</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>