force-app/main/default/objects/Claim/fields/WC_Dealer_Notified_At__c.field-meta.xml
<CustomField>
    <fullName>WC_Dealer_Notified_At__c</fullName>
    <description>WC — When the dealer was notified (e.g. WhatsApp outbound).</description>
    <label>WC Dealer Notified At</label>
    <type>DateTime</type>
</CustomField>