force-app/main/default/objects/Claim/fields/WC_Electra_Auto_Check_At__c.field-meta.xml
<CustomField>
    <fullName>WC_Electra_Auto_Check_At__c</fullName>
    <description>WC — When Electra may auto-approve (set ~1 min after Slack approver notification). Cleared after decision or skip.</description>
    <label>WC Electra Auto Check At</label>
    <type>DateTime</type>
</CustomField>