force-app/main/default/objects/Claim/fields/WC_Electra_Auto_Notes__c.field-meta.xml
<CustomField>
    <fullName>WC_Electra_Auto_Notes__c</fullName>
    <description>WC — Notes when Electra Automated Approver approves (low risk, no prior decision).</description>
    <label>WC Electra Auto Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>