force-app/main/default/objects/Claim/fields/WC_Part_Coverage_Status__c.field-meta.xml
<CustomField>
    <fullName>WC_Part_Coverage_Status__c</fullName>
    <description>WC — Coverage outcome for the primary part.</description>
    <label>WC Part Coverage Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Covered</fullName>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>