force-app/main/default/objects/Claim/fields/WC_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>WC_Rejection_Reason__c</fullName>
    <description>WC — Reason shown to dealer on rejection (no internal-only notes).</description>
    <label>WC Rejection Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>