force-app/main/default/objects/Claim/fields/WC_Service_Bulletin_Ref__c.field-meta.xml
<CustomField>
    <fullName>WC_Service_Bulletin_Ref__c</fullName>
    <description>WC — Reference to service bulletin or knowledge article.</description>
    <label>WC Service Bulletin Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>