force-app/main/default/objects/Claim/fields/WC_Slack_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>WC_Slack_Channel_Id__c</fullName>
    <description>WC — Slack channel Id (C…) returned when the approver notification was posted via Incoming Webhook; used for chat.update.</description>
    <label>WC Slack Channel Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>