force-app/main/default/objects/Claim/fields/WC_Slack_Message_Ts__c.field-meta.xml
<CustomField>
    <fullName>WC_Slack_Message_Ts__c</fullName>
    <description>WC — Slack message timestamp (ts) returned when the approver notification was posted; pairs with WC_Slack_Channel_Id__c for chat.update.</description>
    <label>WC Slack Message Ts</label>
    <length>32</length>
    <type>Text</type>
</CustomField>