force-app/main/default/objects/Claim/fields/WC_Submission_Channel__c.field-meta.xml
<CustomField>
    <fullName>WC_Submission_Channel__c</fullName>
    <description>WC — Channel used for intake (e.g. WhatsApp).</description>
    <label>WC Submission Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>