force-app/main/default/objects/Claim/fields/WC_Time_To_Decision_Minutes__c.field-meta.xml
<CustomField>
    <fullName>WC_Time_To_Decision_Minutes__c</fullName>
    <description>WC — Minutes from Claim CreatedDate to WC Approved At (blank until approved).</description>
    <formula>IF(ISBLANK(WC_Approved_At__c), NULL, (WC_Approved_At__c - CreatedDate) * 24 * 60)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>WC Time To Decision Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>